# instamark

./: Cargo.toml  LICENSE.txt  README.md
src/: main.rs  netscape_bookmark.rs
